# glfw_practice

./: CMakeLists.txt  README.md
include/: window.h
src/: main.cpp  window.cpp
